Small dark mode fixes

--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -1060,6 +1060,10 @@ td, th {
     padding: .3em .7em;
 }
 
+.dark .page-header-section-title.ruleseed-seeded {
+    color: #f44;
+
+}
 .ruleseed-header {
     display: none;
 }
@@ -1137,4 +1141,9 @@ td, th {
 
 .dark a {
     color: #F44121;
+}
+
+.dark ::selection {
+    background: #2E58CC;
+    color: white;
 }
